adds arms to the ghost

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       }
 
       body {
+        image-rendering: pixelated;
         font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial,
           sans-serif;
         color: black;
