Adds controls to metaballs example

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,10 @@
       *:focus {
         outline: none;
       }
+
+      .tp-dfwv {
+        width: 300px !important;
+      }
     </style>
 
     <!--
